# Practice-Workspace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Makefile  README.md  docker-compose.yml
.clinerules/: plan,reviews,workflows.md
.husky/: pre-commit  pre-push
.platform/workflows/: create_exercise.md  create_lesson.md  create_session_summary.md  extract_concepts.md  generate_hint.md  generate_quiz.md  summarise_chapter.md
backend/: main.go  main_test.go  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  seed.py  state.py
backend/app/agents/: __init__.py  eval_agent.py  ingestion_agent.py  practice_agent.py  session_service.py  session_summary.py  tutor.py  tutor_service.py  workflow_agent.py
backend/app/api/: __init__.py  _artifact_factory.py  _ids.py  artifacts.py  chat.py  concepts.py  events.py  health.py  mastery.py  practice_exercises.py  problems.py  sources.py  workflows.py  workspace.py
backend/app/core/: config.py  exceptions.py  ids.py
backend/app/domain/: __init__.py  artifact.py  events.py  graph.py  workspace.py
backend/app/harness/: __init__.py  artifact_gate.py  compaction_config.py  context_gate.py  eval_gate.py  event_emitter.py  graph_layer.py  graphiti_mastery_store.py  ingestion_gate.py  kuzu_graph_layer.py  memory_seed.py  model_router.py  named_configs.py  qdrant_router.py  retrieval_router.py  temporal_mastery_store.py  tool_registry.py  workflow_template_system.py
backend/app/harness/tool_registry/: file_read.json  get_concept_context.json  graph_lookup.json  memory_read.json  memory_write.json  sandbox_run.json  session_history.json  skill_lookup.json  source_search.json  source_search_exact.json  tool_lookup.json  workflow_lookup.json
backend/app/ingestion/: __init__.py  service.py
backend/app/storage/: __init__.py  database.py  eval_runs_repo.py  event_store.py  workflows_repo.py  workspace_repo.py
backend/ingestion-pipeline/: cli.py  pipeline.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_artifact_factory.py  test_artifact_gate.py  test_artifacts_api.py  test_compaction.py  test_context_gate.py  test_context_gate_cache.py  test_eval_gate.py  test_eval_runs_repo.py  test_event_emitter.py  test_event_store.py  test_graphiti_cache_invalidation.py  test_health.py  test_ids.py  test_kuzu_graph_layer.py  test_logfire.py  test_model_router.py  test_named_configs.py  test_practice_agent_payload.py  test_practice_exercises.py  test_qdrant_router.py  test_sources_api.py  test_storage_paths.py  test_tool_registry.py  test_tracer_bullet.py  test_workflow_template_system.py  test_workflows_api.py  test_workspace_api.py
data/: problems.json
dev/: codebase_review_plan.md  verify_prd_coverage.py
docs/: graphite-demo-session.md  graphite-workflow-rules.md  handoff-2026-06-02-implementation-start.md  handoff-2026-06-02-phase-0-complete.md  handoff-context-engineering-dev.md  handoff-current-session.md  handoff-harness-engineering-session.md  handoff-studio-workflows.md  handoff_migration.md  harness-engineering-design.md  implementation-plan.md  pr-2026-06-02-studio-workflows.md  prd-context-engineering-layer (1).md  prd-harness-layer.md  repo-migration-plan.md  zoomout-prd-coverage-checker.md
docs/adr/: 0002-retrieval-layer-starts-with-qdrant.md  0006-context-builder-uses-fixed-slots-with-controlled-retrieval.md  0007-context-budget-defaults-to-conservative-with-deep-source-mode.md  0008-artifact-workflows-use-structured-templates-with-editable-prompts.md  0013-socratic-gate-enforces-no-leakage-post-generation.md  0014-harness-writes-memory-model-never-does.md  0015-context-gate-uses-seed-and-discover.md  0016-compaction-uses-api-primitives-historymanager-deleted.md  0017-retrieval-router-mandates-source-ids-filter.md  0018-five-agent-roles-have-distinct-harness-configs.md  0019-concept-identity-resolved-at-ingestion.md  0020-qdrant-for-source-chunks-memory-events-use-sql.md  (+11 more)
frontend/: .lintstagedrc.json  .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+82 files in other folders)
