[project]
name = "pracda-go-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Core API
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.28",
    "httpx>=0.28.1",
    # AI runtime (ADR-0003: Pydantic AI first)
    "pydantic-ai>=1.0.0",
    # Observability (optional-local, no LOGFIRE_TOKEN required)
    "logfire[fastapi,httpx,pydantic-ai,sqlite3]>=3.14.0",
    # Kept for ingestion-pipeline compatibility
    "litellm>=1.85.1",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "kuzu>=0.11.3",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.5.1",
    "graphiti-core[kuzu]>=0.29.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "data",
    "ingestion-pipeline",
    "storage",
    ".venv",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function call in default argument (FastAPI pattern)
    "UP007",  # X | Y union syntax — keep Optional for older 3.12 compat
]

[tool.ruff.lint.per-file-ignores]
"app/api/*" = ["B008"]  # FastAPI dependency defaults
"tests/*" = ["N802", "N803", "B011"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "data",
    "ingestion-pipeline",
    "storage",
    ".venv",
    "tests",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "graphiti_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kuzu.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qdrant_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "app/main.py",
    "data/*",
    "ingestion-pipeline/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "logger\\.",
]
show_missing = true
skip_covered = false
# Phase 0 baseline: 57% (pre-fix-cycle). Raise to 80% in Phase 14
# (housekeeping) once the review-fix cycle adds the missing tests.
fail_under = 55

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
